DigicielFull/force-app/main/default/objects/amc__Budget_Item__c/fields/amc__Completed_Expenses_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Completed_Expenses_Cost__c</fullName>
    <inlineHelpText>Sum value of Cost Amount field from all Expenses associated to this Budget Item where Approval Status = Approved</inlineHelpText>
    <label>Completed Expenses (Cost)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>