DigicielFull/force-app/main/default/objects/amc__Budget_Item__c/fields/amc__Cost_Budget__c.field-meta.xml
<CustomField>
    <fullName>amc__Cost_Budget__c</fullName>
    <inlineHelpText>Identifies the Cost Budget for this Budget Item</inlineHelpText>
    <label>Cost Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>