DigicielFull/force-app/main/default/objects/amc__Budget_Item__c/fields/amc__GM_Budget__c.field-meta.xml
<CustomField>
    <fullName>amc__GM_Budget__c</fullName>
    <formula>( amc__Billable_Budget__c  -  amc__Cost_Budget__c ) /  amc__Billable_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: (Billable Budget - Cost Budget) / Billable Budget</inlineHelpText>
    <label>GM% Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>