DigicielFull/force-app/main/default/objects/amc__Budget_Item__c/fields/amc__GM_Budget_Total_Completed_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__GM_Budget_Total_Completed_Cost__c</fullName>
    <formula>( amc__Billable_Budget__c  -  amc__Total_Completed_Cost__c ) /  amc__Billable_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: (Billable Budget - Total Completed Cost) / Billable Budget</inlineHelpText>
    <label>GM% Budget - Total Completed Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>