DigicielFull/force-app/main/default/objects/amc__Budget_Item__c/fields/amc__Hours_Remaining_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Remaining_Billable__c</fullName>
    <inlineHelpText>Sum value of Hours Remaining (Billable) field from Actions associated to this Budget Item</inlineHelpText>
    <label>Hours Remaining (Billable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>