DigicielFull/force-app/main/default/objects/amc__Budget_Item__c/fields/amc__Material_Costs_Remaining_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Material_Costs_Remaining_Billable__c</fullName>
    <inlineHelpText>Sum value of Material Costs Remaining (Billable) field from Actions associated to this Budget Item</inlineHelpText>
    <label>Material Costs Remaining (Billable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>