DigicielFull/force-app/main/default/objects/amc__Budget_Item__c/fields/amc__Material_Costs_Scheduled_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Material_Costs_Scheduled_Billable__c</fullName>
    <inlineHelpText>Sum value of Material Costs Scheduled (Billable) field from Actions associated to this Budget Item</inlineHelpText>
    <label>Material Costs Scheduled (Billable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>