DigicielFull/force-app/main/default/objects/amc__Budget_Item__c/fields/amc__Material_Costs_Scheduled_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Material_Costs_Scheduled_Cost__c</fullName>
    <inlineHelpText>Sum value of Material Costs Scheduled (Cost) field from Actions associated to this Budget Item</inlineHelpText>
    <label>Material Costs Scheduled (Cost)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>