DigicielFull/force-app/main/default/objects/amc__Budget_Item__c/fields/amc__P_L_Budget_Total_Scheduled_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__P_L_Budget_Total_Scheduled_Cost__c</fullName>
    <formula>amc__Billable_Budget__c  -  amc__Total_Scheduled_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Sum of Billable Budget - Total Scheduled Cost</inlineHelpText>
    <label>P&amp;L Budget - Total Scheduled Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>