DigicielFull/force-app/main/default/objects/amc__Budget_Item__c/fields/amc__Project__c.field-meta.xml
<CustomField>
    <fullName>amc__Project__c</fullName>
    <inlineHelpText>Identifies the Project this Budget Item relates to</inlineHelpText>
    <label>Project</label>
    <referenceTo>amc__Project__c</referenceTo>
    <relationshipLabel>Budget Items</relationshipLabel>
    <relationshipName>Budget_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>