DigicielFull/force-app/main/default/objects/amc__Budget_Item__c/fields/amc__Total_Completed_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_Completed_Billable__c</fullName>
    <formula>amc__Hours_Completed_Billable__c  +  amc__Completed_Expenses_Billable__c  +  amc__Material_Costs_Completed_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Sum of Hours Completed (Billable) + Completed Expenses (Billable) + Material Costs Completed (Billable)</inlineHelpText>
    <label>Total Completed Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>