DigicielFull/force-app/main/default/objects/amc__Budget_Item__c/fields/amc__Total_Completed_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_Completed_Cost__c</fullName>
    <formula>amc__Hours_Completed_Cost__c  +  amc__Completed_Expenses_Cost__c  +  amc__Material_Costs_Completed_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Sum of Hours Completed (Cost) + Completed Expenses (Cost) + Material Costs Completed (Cost)</inlineHelpText>
    <label>Total Completed Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>