DigicielFull/force-app/main/default/objects/amc__Budget_Item__c/fields/amc__Total_Forecast_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_Forecast_Billable__c</fullName>
    <formula>amc__Total_Completed_Billable__c  +  amc__Total_Remaining_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Sum of Total Completed Billable + Total Remaining Billable</inlineHelpText>
    <label>Total Forecast Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>