DigicielFull/force-app/main/default/objects/amc__Budget_Item__c/fields/amc__Total_Remaining_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_Remaining_Cost__c</fullName>
    <formula>amc__Hours_Remaining_Cost__c  +  amc__Remaining_Expenses_Cost__c  +  amc__Material_Costs_Remaining_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Sum of Hours Remaining (Cost) + Remaining Expenses (Cost) + Material Costs Remaining (Cost)</inlineHelpText>
    <label>Total Remaining Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>