DigicielFull/force-app/main/default/objects/amc__Budget_Item__c/fields/amc__Total_Scheduled_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_Scheduled_Billable__c</fullName>
    <formula>amc__Hours_Scheduled_Billable__c  +  amc__Scheduled_Expenses_Billable__c  +  amc__Material_Costs_Scheduled_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Sum of Hours Scheduled (Billable) + Scheduled Expenses (Billable) + Material Costs Scheduled (Billable)</inlineHelpText>
    <label>Total Scheduled Billable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>