DigicielFull/force-app/main/default/objects/amc__Budget_Item__c/fields/amc__Total_Scheduled_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_Scheduled_Cost__c</fullName>
    <formula>amc__Hours_Scheduled_Cost__c  +  amc__Scheduled_Expenses_Cost__c  +  amc__Material_Costs_Scheduled_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Sum of Hours Scheduled (Cost) + Scheduled Expenses (Cost) + Material Costs Scheduled (Cost)</inlineHelpText>
    <label>Total Scheduled Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>