DigicielFull/force-app/main/default/objects/amc__Budget_Item__c/fields/amc__VAR_Budget_Total_Scheduled_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__VAR_Budget_Total_Scheduled_Billable__c</fullName>
    <formula>amc__Billable_Budget__c  -  amc__Total_Scheduled_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Billable Budget - Total Scheduled Billable</inlineHelpText>
    <label>VAR Budget - Total Scheduled Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>